# projetos_para_estudo

./: .gitignore  README.md
BlogPro/: .env-exemple  docker-compose.yml  pyproject.toml
BlogPro/apps/accounts/: urls.py
BlogPro/apps/comments/: models.py
BlogPro/apps/comments/migrations/: 0001_initial.py
BlogPro/apps/engagements/: admin.py  apps.py  models.py  urls.py  views.py
BlogPro/apps/engagements/migrations/: 0001_initial.py
BlogPro/apps/posts/: admin.py  models.py  urls.py  views.py
BlogPro/apps/posts/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_alter_post_options.py
BlogPro/apps/tags/: models.py
BlogPro/apps/tags/migrations/: 0001_initial.py
BlogPro/setup/: settings.py  urls.py
BlogPro/static/base/css/: mcn-base.css
BlogPro/templates/base/pages/: base.html
BlogPro/templates/base/partials/: footer.html  nav.html  statics.html
BlogPro/templates/engagements/partials/: liked.html  no-liked.html
BlogPro/templates/posts/pages/: details.html  index.html
BlogPro/templates/posts/partials/: li-posts.html
django-todolist/: pyproject.toml
django-todolist/apps/todo/: models.py  urls.py  views.py
django-todolist/apps/todo/migrations/: 0001_initial.py  0002_alter_task_created_at.py  0003_alter_task_created_at_alter_task_status.py  0004_alter_task_id.py  0005_alter_task_id.py
django-todolist/setup/: settings.py  urls.py
micro-reddit/web/: pyproject.toml
micro-reddit/web/posts/: admin.py  models.py
micro-reddit/web/posts/migrations/: 0001_initial.py
micro-reddit/web/setup/: settings.py  urls.py
ultra_learning/: pyproject.toml
ultra_learning/apps/core/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
ultra_learning/setup/: settings.py  urls.py
ultra_learning/static/css/: global.css  home.css  index.css
ultra_learning/static/js/: home.js
ultra_learning/templates/pages/: base.html  home.html  index.html
ultra_learning/templates/partials/: li.html  meta.html  progress-bar.html  progress-result.html  static.html
wheel_to_wheel/: main.py  pyproject.toml  word_list.py
wheel_to_wheel/project/: run.py
(+317 files in other folders)
