[project]
name = "blogpro"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]


[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 80
exclude =  ["./apps/**/migrations"]

[tool.ruff.format]
quote-style = "single"