[project]
name = "django-todolist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 80
exclude =  ["./apps/**/migrations"]

[tool.ruff.format]
quote-style = "single"