[project]
name = "web"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "dotenv>=0.9.9",
    "psycopg2-binary>=2.9.10",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]


[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 80
exclude =  ["./apps/**/migrations"]

[tool.ruff.format]
quote-style = "single"
